--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^15.1.0",
     "@angular/compiler": "^15.1.0",
     "@angular/core": "^15.1.0",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^15.1.0",
     "@angular/google-maps": "^15.0.0",
     "@angular/material": "^15.2.8",
@@ -26,6 +27,7 @@
     "bootstrap": "^5.2.3",
     "ngx-image-zoom": "^2.1.0",
     "rxjs": "~7.8.0",
+    "save": "^2.9.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
