--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^15.1.0",
     "@ng-bootstrap/ng-bootstrap": "^14.0.1",
     "@popperjs/core": "^2.11.6",
+    "angular-responsive-carousel": "^2.1.2",
     "bootstrap": "^5.2.3",
     "ngx-image-zoom": "^2.1.0",
     "rxjs": "~7.8.0",
