--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ng-bootstrap/ng-bootstrap": "^14.0.1",
     "@popperjs/core": "^2.11.6",
     "angular-responsive-carousel": "^2.1.2",
+    "aos": "^2.3.4",
     "bootstrap": "^5.2.3",
     "ngx-image-zoom": "^2.1.0",
     "rxjs": "~7.8.0",
@@ -37,6 +38,7 @@
     "@angular/cli": "~15.1.6",
     "@angular/compiler-cli": "^15.1.0",
     "@angular/localize": "^15.1.0",
+    "@types/aos": "^3.0.4",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
